# renderers-rust

./: CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.changeset/: add-event-codegen.md  odd-beans-bake.md  polite-breads-behave.md  solana-v3.md  tired-rules-rule.md  wicked-needles-thank.md
e2e/: generate-anchor.cjs  generate.cjs  test.sh
e2e/anchor/: Cargo.toml
e2e/dummy/: Cargo.toml  idl.json
e2e/governance/: Cargo.toml  idl.json
e2e/governance/src/: lib.rs
e2e/memo/: Cargo.toml
e2e/meteora/: Cargo.toml
e2e/raydium-cpmm/: Cargo.toml
e2e/raydium-cpmm/src/: lib.rs
e2e/system/: Cargo.toml
public/templates/: accountsPage.njk  eventsMod.njk  eventsPage.njk  instructionsCpiPageBuilder.njk  instructionsPageBuilder.njk  pdasMod.njk  pdasPage.njk  programEventsPage.njk  rootMod.njk
src/: ImportMap.ts  getRenderMapVisitor.ts  getTypeManifestVisitor.ts  renderVisitor.ts
src/utils/: cargoToml.ts  computePda.ts  discriminatorConstant.ts  index.ts  render.ts  traitOptions.ts
test/: accountsPage.test.ts  definedTypesPage.test.ts  errorsPage.test.ts  eventsPage.test.ts  instructionsPage.test.ts  pdasPage.test.ts
test/types/: array.test.ts  number.test.ts
test/utils/: cargoToml.test.ts  traitOptions.test.ts
