[workspace]
members = ["e2e/*"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "~0.31"
borsh = "^1.0"
num-derive = "^0.4"
num-traits = "^0.2"
solana-account = "~3.0"
solana-account-info = "~3.1"
solana-address = "~2.2"
solana-client = "~3.0"
solana-cpi = "~3.1"
solana-decode-error = "~2.3"
solana-instruction = "~3.2"
solana-program-error = "~3.0"
spl-collections = "0.1.1"
thiserror = "^1.0"
