[package]
name = "codama-renderers-rust-e2e-dummy"
version = "0.0.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
borsh = { workspace = true }
solana-account-info = { workspace = true }
solana-address = { workspace = true, features = ["borsh", "copy", "curve25519", "decode"] }
solana-cpi = { workspace = true }
solana-instruction = { workspace = true }
solana-program-error = { workspace = true }
