[package]
name = "codama-renderers-rust-e2e-governance"
version = "0.0.0"
edition = "2021"

[features]
anchor = ["dep:anchor-lang"]
anchor-idl-build = ["anchor", "anchor-lang?/idl-build"]
serde = ["dep:serde", "dep:serde_with", "dep:serde-big-array"]
test-sbf = []

[dependencies]
anchor-lang = { workspace = true, optional = true }
borsh = { workspace = true }
kaigan = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde-big-array = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
solana-account = { workspace = true }
solana-account-info = { workspace = true }
solana-client = { workspace = true, optional = true }
solana-cpi = { workspace = true }
solana-decode-error = { workspace = true }
solana-instruction = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true, features = ["curve25519", "borsh"] }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
solana-sdk = { workspace = true }
