[package]
name = "codama-renderers-rust-e2e-governance"
version = "0.0.0"
edition = "2021"

[features]
anchor = ["dep:anchor-lang"]
anchor-idl-build = ["anchor", "anchor-lang?/idl-build"]
fetch = ["dep:solana-client"]
serde = ["dep:serde", "dep:serde_with", "dep:serde-big-array"]
test-sbf = []

[dependencies]
anchor-lang = { workspace = true, optional = true }
borsh = { workspace = true }
kaigan = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde-big-array = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
solana-account = { workspace = true }
solana-account-info = { workspace = true }
solana-client = { workspace = true, optional = true }
solana-cpi = { workspace = true }
solana-decode-error = { workspace = true }
solana-instruction = { workspace = true }
solana-program-error = { workspace = true }
solana-address = { workspace = true, features = ["borsh", "copy", "curve25519", "decode"] }
spl-collections = { workspace = true }
thiserror = { workspace = true }
