[package]
name = "codama-renderers-rust-e2e-memo"
version = "0.0.0"
edition = "2021"

[features]
anchor = ["dep:anchor-lang"]
anchor-idl-build = ["anchor", "anchor-lang?/idl-build"]
test-sbf = []

[dependencies]
anchor-lang = { workspace = true, optional = true }
borsh = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
spl-collections = { workspace = true }
solana-account = { workspace = true }
solana-account-info = { workspace = true }
solana-client = { workspace = true, optional = true }
solana-cpi = { workspace = true }
solana-decode-error = { workspace = true }
solana-instruction = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true, features = ["curve25519", "borsh"] }
solana-sdk = { workspace = true, optional = true }
thiserror = { workspace = true }

