[package]
name = "codama-renderers-rust-e2e-raydium-cpmm"
version = "0.0.0"
edition = "2021"

[features]
anchor = ["dep:anchor-lang"]
anchor-idl-build = ["anchor", "anchor-lang?/idl-build"]
test-sbf = []
fetch = ["dep:solana-client"]

[dependencies]
anchor-lang = { workspace = true, optional = true }
borsh = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
solana-account = { workspace = true }
solana-account-info = { workspace = true }
solana-pubkey = { workspace = true, features = ["borsh", "curve25519"] }
solana-client = { workspace = true, optional = true }
solana-cpi = { workspace = true }
solana-instruction = { workspace = true }
solana-program-error = { workspace = true }
thiserror = { workspace = true }
